# llm-webrtc

./: .gitignore  README.md
backend/: ai_processor.py  main.py  main_simple.py  package.json  pyproject.toml  requirements.txt  start_dev.bat  start_dev.sh  test_clients.py  test_server.py
backend/VLC/: app.py  config.py  streamer.py  utils.py
backend/VLC/static/: style.css
backend/VLC/templates/: index.html
backend/handlers/: ai.py  p2p.py  streamer.py
backend/sfu/: package.json  pnpm-lock.yaml  server.js
backend/streaming/: streamer.py  utils.py
backend/test/: analyze_data.py  benchmark_log.csv  benchmark_log_batch_1.csv  benchmark_log_batch_10.csv  benchmark_log_batch_20.csv  benchmark_log_batch_5.csv  benchmark_runner.py  benchmark_summary.csv
backend/test/multi/: 1.csv  full_system_diff.py  full_tolerance_analysis.csv  handle_data.py  单帧全轮次有抖动有丢包.csv  单帧全轮次有抖动没丢包.csv  单帧全轮次没有抖动有丢包.csv  单帧全轮次没有抖动没有丢包.csv
backend/test/singleline/: analyze_data.py  benchmark_log_batch_1.csv  benchmark_log_batch_10.csv  benchmark_log_batch_20.csv  benchmark_log_batch_5.csv  benchmark_runner.py
backend/test/singleline2/: benchmark_research.py  plot_research.py  research_results.csv
frontend/: index.html  package.json  pnpm-lock.yaml  test_socketio_connection.html  vite.config.js
frontend/certs/: localhost+3-key.pem  localhost+3.pem
frontend/src/: App.vue
frontend/src/components/: AIOverlay.vue  AnalysisResults.vue  ConnectionStatus.vue  ServerPushViewer.vue  SimpleVideoDisplay.vue  StreamManager.vue  SyncedVideo.vue  VideoStream.vue  WebRTCApp.vue  WebRTCCore.vue
frontend/src/components/old/: AnalysisResults.vue  StreamManager.vue  VideoStream.vue  WebRTCApp.vue
frontend/src/router/: index.js
frontend/src/stores/: useAIStore.js  useP2PStore.js  useSFUStore.js  useServerPushStore.js  useSignalLogStore.js  useSocketStore.js  useStreamerStore.js  webrtc-simple.js  webrtc.js
frontend/src/stores/old/: webrtc.js
frontend/src/utils/: httpre.js  keypointsLoader.js  mitt.js
frontend/src/views/: SimpleWebRTC.vue
